--- a/style.css
+++ b/style.css
@@ -1,18 +1,56 @@
 body {
     margin: 0;
     padding: 0;
-
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 @font-face {
     font-family: "Logo";
-    src: url("./TheHistoriaDemo.otf");
+    src: url("./res/fonts/TheHistoriaDemo.otf");
     font-style: normal;
 }
 
 
 .navbar-outter {
-    height: 7vh;
+    position: fixed;
+    width: 100%;
+    height: 80px;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
-    box-shadow: 10px 5px 15px 1px #00000024;
+    box-shadow: 10px 5px 15px 1px #31006124;
+    justify-content: space-around;
+    align-items: center;
+    display: grid;
+    grid-template-columns:40% 57% 3%;
+}
+.navbar-outter div{
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.logo h1 {
+    font-family: 'Logo';
+    font-weight: 300;
+    user-select: none;
+    color: #390372;
+}
+.small-text {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+}
+.background-illustration {
+    border-radius: 10px;
+    padding-top: -50px;
+    background-image: linear-gradient(to right, rgba(241, 241, 241, 0.22) , rgba(198, 146, 231, 0.385)), url('./res/img/nav.png');
+    background-size: cover;
+    box-shadow: 10px 5px 20px 1px #0000002b;
+}
+
+@media screen and (max-width : 500px) {
+    .logo h1 {
+        font-size: 25px;
+    }
+    .small-text {
+        font-size:12px;
+    }
 }
