--- a/style.css
+++ b/style.css
@@ -8,19 +8,25 @@ body {
     src: url("./res/fonts/TheHistoriaDemo.otf");
     font-style: normal;
 }
-
+.app {
+    width: 100%;
+    height: 50vh;
+    background-color: rgba(250, 235, 215, 0.294);
+}
 
 .navbar-outter {
     position: fixed;
     width: 100%;
     height: 80px;
+    background-color: #fff;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
     box-shadow: 10px 5px 15px 1px #31006124;
     justify-content: space-around;
     align-items: center;
     display: grid;
-    grid-template-columns:50% 30%;
+    align-items: center;
+    grid-template-columns:50% 20%;
 }
 .navbar-outter div{
     height: 50px;
@@ -38,7 +44,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 13px;
 }
-.background-illustration {
+.status {
     border-radius: 10px;
     box-shadow: 10px 5px 20px 1px #0000002b;
 }
