--- a/style.css
+++ b/style.css
@@ -8,11 +8,7 @@ body {
     src: url("./res/fonts/TheHistoriaDemo.otf");
     font-style: normal;
 }
-.app {
-    width: 100%;
-    height: 50vh;
-    background-color: rgba(250, 235, 215, 0.294);
-}
+
 
 .navbar-outter {
     position: fixed;
@@ -47,6 +43,45 @@ body {
 .status {
     border-radius: 10px;
     box-shadow: 10px 5px 20px 1px #0000002b;
+}
+.app {
+    width: 100%;
+    padding-top: 100px;
+    height: 50vh;
+    background-color: rgba(250, 235, 215, 0.229);
+    display: flex;
+    flex-wrap: wrap;
+}
+.app div {
+    width: 200px;
+    height: 130px;
+    border-radius: 20px;
+    position: absolute;
+    box-shadow: 10px 5px 15px 1px #30006150;
+    right: 40px;
+    padding: 10px;
+    color: #390372;
+    text-align: center;
+}
+.logo-small {
+    font-family: 'Logo';
+    font-size: 25px;
+    line-height: 15px;
+}
+.signin-btn {
+    margin: 0 auto;
+    padding: 10px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: #390372;
+    background-color: #fff;
+    box-shadow: 10px 5px 15px 1px #3e334850;
+}
+.frankula {
+    width: 400px;
+    position: absolute;
+    top: 30vh;
+    left: 0;
 }
 
 @media screen and (max-width : 500px) {
