--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 .navbar-outter {
     position: fixed;
+    z-index: 69;
     width: 100%;
     height: 80px;
     background-color: #fff;
@@ -46,6 +47,7 @@ body {
 }
 .app {
     width: 100%;
+    z-index: 1;
     padding-top: 100px;
     height: 50vh;
     background-color: rgba(250, 235, 215, 0.229);
