--- a/style.css
+++ b/style.css
@@ -9,9 +9,13 @@ body {
     font-style: normal;
 }
 
+.App-outter {
+    width: 500px;
+    height: 100vh;
+    margin: 0 auto;
+}
 
 .navbar-outter {
-    position: fixed;
     z-index: 69;
     width: 100%;
     height: 80px;
@@ -22,6 +26,7 @@ body {
     justify-content: space-around;
     align-items: center;
     display: grid;
+    margin: 0 auto;
     align-items: center;
     grid-template-columns:50% 20%;
 }
@@ -49,18 +54,17 @@ body {
     width: 100%;
     z-index: 1;
     padding-top: 100px;
-    height: 50vh;
+    height: 35vh;
     background-color: rgba(250, 235, 215, 0.229);
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto;
 }
 .app div {
     width: 200px;
     height: 130px;
     border-radius: 20px;
-    position: absolute;
+    background-color: rgba(250, 235, 215, 0.229);
     box-shadow: 10px 5px 15px 1px #30006150;
-    right: 40px;
     padding: 10px;
     color: #390372;
     text-align: center;
@@ -81,9 +85,7 @@ body {
 }
 .frankula {
     width: 400px;
-    position: absolute;
-    top: 30vh;
-    left: 0;
+    margin-top: 5vh;
 }
 
 @media screen and (max-width : 500px) {
@@ -92,5 +94,18 @@ body {
     }
     .small-text {
         font-size:12px;
+    }
+    .app {
+        justify-content: space-around;
+    }
+    .app div {
+        margin-top: -90px;
+        margin-left: -250px;
+    }
+    .App-outter {
+        width: 101vw;
+        height: 900px;
+        overflow-x:hidden;
+        margin: 0 auto;
     }
 }
