--- a/style.css
+++ b/style.css
@@ -8,10 +8,13 @@ body {
     src: url("./res/fonts/TheHistoriaDemo.otf");
     font-style: normal;
 }
-
+.App {
+    width: 100%;
+    background-color: rgba(250, 235, 215, 0.229);
+    height: 50%;
+}
 .App-outter {
     width: 500px;
-    height: 100vh;
     margin: 0 auto;
 }
 
@@ -55,7 +58,6 @@ body {
     z-index: 1;
     padding-top: 100px;
     height: 35vh;
-    background-color: rgba(250, 235, 215, 0.229);
     display: grid;
     grid-template-columns: auto auto;
 }
@@ -79,13 +81,51 @@ body {
     padding: 10px;
     border-radius: 10px;
     text-decoration: none;
+    font-size: 15px;
     color: #390372;
     background-color: #fff;
     box-shadow: 10px 5px 15px 1px #3e334850;
 }
+.signin-btn:hover {
+    color: #fff;
+    background-color: #390372;
+}
 .frankula {
     width: 400px;
     margin-top: 5vh;
+}
+.banner {
+    display: grid;
+    width: 650px;
+    margin: 0 auto;
+    margin-top: 80px;
+    margin-bottom: 50px;
+    grid-template-columns: auto;
+    justify-content: space-around;
+}
+.banner div {
+    height: 50vh;
+    margin: 0 0 80px 0;
+    grid-template-columns: auto auto;
+}
+.card-info {
+    width: 50%;
+    background-color: transparent;
+    border-radius: 10px;
+    margin: 0;
+    margin-left: 20px;
+    margin-top: 40px;
+    padding: 15px;
+    font-size: 15px;
+    text-align: justify;
+}
+.card-image {
+    border-radius: 10px;
+    box-shadow: 10px 5px 15px 1px #3e334850;
+    width: 300px;
+    margin-top: 30px;
+    margin-right: 20px;
+    float: right;
 }
 
 @media screen and (max-width : 500px) {
@@ -94,6 +134,9 @@ body {
     }
     .small-text {
         font-size:12px;
+    }
+    .App {
+        height: 78vh;
     }
     .app {
         justify-content: space-around;
@@ -107,5 +150,11 @@ body {
         height: 900px;
         overflow-x:hidden;
         margin: 0 auto;
+    }
+    .banner {
+        width: 100%;
+    }
+    .banner div {
+        margin: 90px 0 100px 0;
     }
 }
