--- a/style.css
+++ b/style.css
@@ -99,22 +99,31 @@ body {
     width: 650px;
     margin: 0 auto;
     margin-top: 80px;
-    margin-bottom: 50px;
+    margin-bottom: 90px;
     grid-template-columns: auto;
     justify-content: space-around;
 }
 .banner div {
     height: 50vh;
-    margin: 0 0 80px 0;
+    margin: 0 0 90px 0;
     grid-template-columns: auto auto;
+}
+.banner div h1 {
+    margin: 0;
+    margin-left: 30px;
+    font-family: 'Logo';
+    padding: 0;
+    font-size: 55px;
+    font-weight: 300;
+    color: #390372;
 }
 .card-info {
     width: 50%;
     background-color: transparent;
     border-radius: 10px;
     margin: 0;
+    margin-top: -20px;
     margin-left: 20px;
-    margin-top: 40px;
     padding: 15px;
     font-size: 15px;
     text-align: justify;
@@ -136,7 +145,7 @@ body {
         font-size:12px;
     }
     .App {
-        height: 78vh;
+        height: 58vh;
     }
     .app {
         justify-content: space-around;
