Just added some more stuff

--- a/style.css
+++ b/style.css
@@ -127,8 +127,14 @@ body {
     margin-top: -20px;
     margin-left: 20px;
     padding: 15px;
-    font-size: 15px;
+    font-size: 20px;
+    text-align: center;
+    color: #390372;
+}
+.card-info span {
+    font-weight: 100;
     text-align: justify;
+    font-size: 14px;
 }
 .card-image {
     border-radius: 10px;
@@ -167,6 +173,6 @@ body {
     }
     .banner div { 
         width: 96%;
-        margin: 95px 0 130px 10px;
+        margin: 145px 0 130px 10px;
     }
 }
